--- a/stylesheets/frontpage.css
+++ b/stylesheets/frontpage.css
@@ -1,4 +1,4 @@
-body, html { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; }
+body, html { font-family: sans-serif; margin: 0; padding: 0; line-height: 1.6; }
 h1, h2 { margin: 5px 0 20px 0; }
 p { margin: 0 0 15px 0; }
 #instructions { width: 300px; font-size: 10pt; }
@@ -8,8 +8,8 @@ p { margin: 0 0 15px 0; }
 body { height: 100%; }
 a { color: #00a; }
 
-#container { background-color: #fff; padding: 20px 40px; max-width: 1200px; margin: 0 auto; }
-#demo { max-width: 800px; width: 100%; float: none; border-right: none; padding-bottom: 50px; }
+#container { background-color: #fff; padding: 20px; max-width: 800px; margin: 0 auto; }
+#demo { width: 100%; float: none; border-right: none; padding-bottom: 500px; }
 #footer { clear: both; }
 
 h1 a { padding: 6px 14px 8px; background-color: #000; color: #fff; font-weight: bold; text-decoration: none; }
